# CX-toss-jiyun

./: README.md  data.sql  db.sqlite3  pyproject.toml  requirements.txt
apps/certificates/: apps.py  models.py  serializers.py  services.py  validate_serializers.py  views.py
apps/certificates/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
templates/: certificate_list.html
