[tool.poetry]
name = "cx-full-stack-base"
version = "0.1.0"
description = ""
authors = ["이재연 <pepper@toss.im>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
